Fixes nav spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -65,7 +65,8 @@ ul.right {
 li {
   float: left;
   font-size: 20px;
-  padding: 30px;
+  padding-top: 30px;
+  padding-left: 50px;
 }
 
 /* Link info */
