--- a/styles/editorial.css
+++ b/styles/editorial.css
@@ -58,7 +58,8 @@ ul.right {
 li {
   float: left;
   font-size: 20px;
-  padding: 30px;
+  padding-top: 30px;
+  padding-left: 50px;
 }
 
 /* Link styles */
